--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="downloads" class="clearfix">
           <a href="https://github.com/redcyd/test/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
-          <a href="https://github.com/redcyd/test/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+         <a href="https://github.com/redcyd/test/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/redcyd/test" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
 
@@ -32,7 +32,7 @@
 
         <section id="main_content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> DESKTOP EDITTING WORKS!.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a> EDITTING USING VIM WORKS!.</h3>
 
 <p>Vim is nice, but any editor would work. This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
