--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="inner">
 
         <header>
-          <h1>VIM EDITTED BOOYAH</h1>
+          <h1>VIM EDITTED BOOYAHH</h1>
           <h2>test website</h2>
         </header>
 
